update new soul

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soul MVP - AI Character Image Generation System</title>
-    <link rel="stylesheet" href="/static/style.css?v=7.0">
+    <link rel="stylesheet" href="/static/style.css?v=8.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -70,6 +70,42 @@
                             <span class="tag">realistic</span>
                             <span class="tag">elegant</span>
                             <span class="tag">sophisticated</span>
+                        </div>
+                    </div>
+                    <div class="soul-card" data-soul="lizhe">
+                        <div class="soul-avatar lizhe-avatar">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <h3>Li Zhe</h3>
+                        <p>Professional style, minimalist, business elite</p>
+                        <div class="soul-tags">
+                            <span class="tag">professional</span>
+                            <span class="tag">minimalist</span>
+                            <span class="tag">business</span>
+                        </div>
+                    </div>
+                    <div class="soul-card" data-soul="linna">
+                        <div class="soul-avatar linna-avatar">
+                            <i class="fas fa-gift"></i>
+                        </div>
+                        <h3>Lin Na</h3>
+                        <p>Fashionable style, vibrant colors, energetic</p>
+                        <div class="soul-tags">
+                            <span class="tag">fashionable</span>
+                            <span class="tag">vibrant</span>
+                            <span class="tag">energetic</span>
+                        </div>
+                    </div>
+                    <div class="soul-card" data-soul="wangjing">
+                        <div class="soul-avatar wangjing-avatar">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <h3>Wang Jing</h3>
+                        <p>Comfortable style, soft colors, serene</p>
+                        <div class="soul-tags">
+                            <span class="tag">comfortable</span>
+                            <span class="tag">soft</span>
+                            <span class="tag">serene</span>
                         </div>
                     </div>
                 </div>
@@ -209,6 +245,6 @@
         </div>
     </div>
 
-    <script src="/static/script.js?v=14.0"></script>
+    <script src="/static/script.js?v=15.0"></script>
 </body>
 </html>
